<?xml version="1.0"?>
<package>
    <name>gym_ros_interface</name>
    <version>0.0.1</version>
    <description>Gym ROS interface</description>

    <license>MIT</license>
    <maintainer email="zachary.ravichandran@ll.mit.edu">Zac Ravichandran</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <!-- Package build dependencies -->
    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
</package>
