<?xml version="1.0"?>
<package>
    <name>tesse_gym_bridge</name>
    <version>0.1.0</version>
    <description>Bridge between tesse-gym and ROS</description>

    <license>MIT</license>
    <maintainer email="zachary.ravichandran@ll.mit.edu">Zac Ravichandran</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <!-- Package build dependencies -->
    <build_depend>rospy</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
</package>
